Add category option to event creation and enhance DOM manipulation demo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <select id="category">
           <option value="work">Work</option>
           <option value="personal">Personal</option>
+          <option value="occasion">Occasion</option>
           <option value="other">Other</option>
         </select>
         <p>Description:</p>
@@ -40,6 +41,21 @@
       <!-- third card -->
       <div class="DOM">
         <h3>DOM Manipulation Demo</h3>
+
+        <div class="dom-box">
+          <h4>innerText  vs  innerHTML  vs  textContent</h4><br>
+
+        <p id="original">
+      <strong>Original HTML:
+
+      </strong> &lt;strong&gt;Bold Text&lt;/strong&gt; with spaces
+    </p>
+
+    <p id="innerHTML-result"></p>
+    <p id="innerText-result"></p>
+    <p id="textContent-result"></p>
+    <br>
+        
         <p id="key-display">You pressed: None</p>
       </div>
     </div>
